Fix layout issues

--- a/src/components/Navbar/navbar.css
+++ b/src/components/Navbar/navbar.css
@@ -118,7 +118,7 @@
 
 .ch-navbar-menu-container-item{
     width: 80%;
-    height: 40px;
+    height: 35px;
     margin-left: 50%;
     transform: translateX(-50%);
     display: flex;
